--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,31 @@
 [package]
-name = "rust"
+name = "som-haiku"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+
 [dependencies]
-regex = "1.11.1"
+regex = { version = "1.11.1", default-features = false, features = ["std", "perf"] } # +600kB
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.100"
+
+[[bin]]
+name = "som-haiku"
+path = "src/main.rs"
+
+[profile.release]
+lto = true
+opt-level = 3
+codegen-units = 1
+strip = true
+panic = "abort"
+
+# [package.metadata.wasm-pack.profile.release.wasm-bindgen]
+# dwarf-debug-info = true
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = ["-O4", "--strip-debug", "--enable-bulk-memory-opt"]
+# wasm-opt = ["-O4", "-g", "--enable-bulk-memory-opt"]
